Blender crashes when selecting lattice points with the select circle tool #63015

Closed
opened 2019-03-27 16:06:11 +01:00 by Karl Northfell · 4 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-26 18:57, hash: 337eb8c1de
Worked: (optional)

Short description of error
If you create a lattice, hit TAB to go into edit mode and try and select a point with the select circle tool Blender crashes

Exact steps for others to reproduce the error
I've attached a sample scene to reproduce the error, but in a clean scene simply add a lattice, go into edit mode and attempt to select a point with the select circle tool.

lattice_crash.zip

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-26 18:57, hash: `337eb8c1de` Worked: (optional) **Short description of error** If you create a lattice, hit TAB to go into edit mode and try and select a point with the select circle tool Blender crashes **Exact steps for others to reproduce the error** I've attached a sample scene to reproduce the error, but in a clean scene simply add a lattice, go into edit mode and attempt to select a point with the select circle tool. [lattice_crash.zip](https://archive.blender.org/developer/F6891169/lattice_crash.zip)
Author

Added subscriber: @GlobalKrampus

Added subscriber: @GlobalKrampus
Campbell Barton was assigned by William Reynish 2019-03-28 12:30:53 +01:00
Campbell Barton was unassigned by Jacques Lucke 2019-03-28 14:47:13 +01:00
Jacques Lucke self-assigned this 2019-03-28 14:47:13 +01:00
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by e2995b29a9

This issue was referenced by e2995b29a99bdd81076349edfe500e9711fc1da4
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63015
No description provided.