Fix T63015: Crash when using circle select tool in lattice edit mode

Reviewers: brecht

Differential Revision: https://developer.blender.org/D4608